--- a/index.html
+++ b/index.html
@@ -3,41 +3,28 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Document</title>
+		<title>Home | David Lutman</title>
 		<link rel="stylesheet" type="text/css" href="main.css"/>
 	</head>
 	<body>
 			<header>
-				<h1 class="page-title">David Lutman</h1>
+				<h1 class="page-title">About me</h1>
 				<p class="page-description">Hi, my name is David and I am a 23 year old software developer. Come learn more about me!</p>	
 			</header>
-			<div class="gallery">
-				<figure class="gallery-item">
-				  <img class="thumbnail" src="https://content.codecademy.com/projects/make-a-website/lesson-3/moss1.jpg">
-				</figure>
-				<figure class="gallery-item">
-					<img class="thumbnail" src="https://content.codecademy.com/projects/make-a-website/lesson-3/moss2.jpg">
-				</figure>
-				<figure class="gallery-item">
-					<img class="thumbnail" src="https://content.codecademy.com/projects/make-a-website/lesson-3/moss3.jpg">
-				</figure>
-				<figure class="gallery-item">
-					<img class="thumbnail" src="https://content.codecademy.com/projects/make-a-website/lesson-3/moss4.jpg">
-				</figure>
-				<figure class="gallery-item">
-					<img class="thumbnail" src="https://content.codecademy.com/projects/make-a-website/lesson-3/moss5.jpg">
-				</figure>
-				<figure class="gallery-item">
-					<img class="thumbnail" src="https://content.codecademy.com/projects/make-a-website/lesson-3/moss6.jpg">
-				</figure>
-			</div>
 		<nav>
 			<ul>
-				<li><a href="#">Resume</a></li>
-				<li><a href="#">About me</a></li>
-				<li><a href="#">Recent Projects</a></li>
+				<li><a href="index.html">About me</a></li>
+				<li><a href="resume.html">Resume</a></li>
+				<li><a href="projects.html">Recent Projects</a></li>
+				<li><a href="other.html">Other</a></li>
 			</ul>
-			<div class="contact-btn"><a>Contact</a></div>
+			<div class="social-media-links">
+				<ul>
+					<li><a href="https://www.linkedin.com/in/david-lutman/">LinkedIn</a></li>
+					<li><a href="https://github.com/Davern">Github</a></li>
+					<li><a>Email</a></li>
+				</ul>
+			</div>
 		</nav>
 	</body>
 </html>
