--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 			<header>
+				<img class="headshot" src="cropped headshot.jpg">
 				<h1 class="page-title">About me</h1>
 				<p class="page-description">Hi, my name is David and I am a 23 year old software developer. Come learn more about me!</p>	
 			</header>
