added icons for social media links

--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
 		<link rel="stylesheet" type="text/css" href="main.css"/>
 	</head>
 	<body>
-			<header>
-				<img class="headshot" src="cropped headshot.jpg">
-				<h1 class="page-title">About me</h1>
-				<p class="page-description">Hi, my name is David and I am a 23 year old software developer. Come learn more about me!</p>	
-			</header>
+		<header>
+			<img class="headshot" src="cropped headshot.jpg">
+			<h1 class="page-title"><b>David Lutman</b></h1>
+			<p class="page-description">Software Developer, Sports Enthusiast, Traveler</p>	
+		</header>
+		<div class="social-media-links">
+			<ul>
+				<li><a href="https://www.linkedin.com/in/david-lutman/"><img src="linkedin-32.jpg"></a></li>
+				<li><a href="https://github.com/Davern"><img src="GitHub-Mark-32px.png"></a></li>
+				<li><a href="https://www.instagram.com/davidlutman/"><img src="iconfinder_SocialMedia_Instagram-Outline_2959748.png"></a></li>
+				<li><a href="mailto:davidlutman@telus.net"><img src="iconfinder_mail_115714.png"></a></li>
+			</ul>
+		</div>
 		<nav>
 			<ul>
 				<li><a href="index.html">About me</a></li>
@@ -19,13 +27,6 @@
 				<li><a href="projects.html">Recent Projects</a></li>
 				<li><a href="other.html">Other</a></li>
 			</ul>
-			<div class="social-media-links">
-				<ul>
-					<li><a href="https://www.linkedin.com/in/david-lutman/">LinkedIn</a></li>
-					<li><a href="https://github.com/Davern">Github</a></li>
-					<li><a>Email</a></li>
-				</ul>
-			</div>
 		</nav>
 	</body>
 </html>
