added resume pdf for when user clicks resume

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">About me</a></li>
-				<li><a href="resume.html">Resume</a></li>
+				<li><a href="David Lutman Resume.pdf">Resume</a></li>
 				<li><a href="projects.html">Recent Projects</a></li>
 				<li><a href="other.html">Other</a></li>
 			</ul>
