--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,8 @@
 <body>
     <header>
         <h1 class="page-title">Resume</h1>
+        <embed src="David Lutman Resume.pdf" type="application/pdf">
+        </embed>
     </header>
     <nav>
         <ul>
