added different pictures for social media

--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
 	</head>
 	<body>
 		<header>
-			<img class="headshot" src="cropped headshot.jpg">
+			<div class="cropped">
+				<img class="headshot" src="cropped headshot.jpg">
+			</div>
 			<h1 class="page-title"><b>David Lutman</b></h1>
 			<p class="page-description">Software Developer, Sports Enthusiast, Traveler</p>	
+			<div class="social-media-links">
+				<ul>
+					<li><a href="https://www.linkedin.com/in/david-lutman/"><img src="iconfinder_Circled_Linkedin_svg_5279114.png"></a></li>
+					<li><a href="https://github.com/Davern"><img src="iconfinder_github_317712.png"></a></li>
+					<li><a href="https://www.instagram.com/davidlutman/"><img src="iconfinder_Circled_Instagram_svg_5279112.png"></a></li>
+					<li><a href="mailto:davidlutman@telus.net"><img src="iconfinder_Email_4550857.png"></a></li>
+				</ul>
+			</div>
 		</header>
-		<div class="social-media-links">
-			<ul>
-				<li><a href="https://www.linkedin.com/in/david-lutman/"><img src="linkedin-32.jpg"></a></li>
-				<li><a href="https://github.com/Davern"><img src="GitHub-Mark-32px.png"></a></li>
-				<li><a href="https://www.instagram.com/davidlutman/"><img src="iconfinder_SocialMedia_Instagram-Outline_2959748.png"></a></li>
-				<li><a href="mailto:davidlutman@telus.net"><img src="iconfinder_mail_115714.png"></a></li>
-			</ul>
-		</div>
 		<nav>
 			<ul>
-				<li><a href="index.html">About me</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="other.html">About Me</a></li>
 				<li><a href="David Lutman Resume.pdf">Resume</a></li>
-				<li><a href="projects.html">Recent Projects</a></li>
-				<li><a href="other.html">Other</a></li>
+				<li><a href="projects.html">Projects</a></li>
 			</ul>
 		</nav>
 	</body>
