--- a/other.html
+++ b/other.html
@@ -3,19 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Other | David Lutman</title>
+    <title>About Me | David Lutman</title>
     <link rel="stylesheet" type="text/css" href="main.css"/>
 </head>
 <body>
     <header>
-        <h1 class="page-title">Other Hobbies</h1>
+        <div class="cropped">
+            <img class="headshot" src="cropped headshot.jpg">
+        </div>
+        <h1 class="page-title"><b>David Lutman</b></h1>
+        <p class="page-description">Software Developer, Sports Enthusiast, Traveler</p>	
+        <div class="social-media-links">
+            <ul>
+                <li><a href="https://www.linkedin.com/in/david-lutman/"><img src="iconfinder_Circled_Linkedin_svg_5279114.png"></a></li>
+                <li><a href="https://github.com/Davern"><img src="iconfinder_github_317712.png"></a></li>
+                <li><a href="https://www.instagram.com/davidlutman/"><img src="iconfinder_Circled_Instagram_svg_5279112.png"></a></li>
+                <li><a href="mailto:davidlutman@telus.net"><img src="iconfinder_Email_4550857.png"></a></li>
+            </ul>
+        </div>
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">About me</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="projects.html">Recent Projects</a></li>
-            <li><a href="other.html">Other</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="other.html">About Me</a></li>
+            <li><a href="David Lutman Resume.pdf">Resume</a></li>
+            <li><a href="projects.html">Projects</a></li>
         </ul>
     </nav>
 </body>
