removed some stuff

--- a/projects.html
+++ b/projects.html
@@ -18,16 +18,32 @@
                 <li><a href="https://www.linkedin.com/in/david-lutman/"><img src="iconfinder_Circled_Linkedin_svg_5279114.png"></a></li>
                 <li><a href="https://github.com/Davern"><img src="iconfinder_github_317712.png"></a></li>
                 <li><a href="https://www.instagram.com/davidlutman/"><img src="iconfinder_Circled_Instagram_svg_5279112.png"></a></li>
-                <li><a href="mailto:davidlutman@telus.net"><img src="iconfinder_Email_4550857.png"></a></li>
+                <li><a href="mailto:davidlutman@telus.net"><img src="iconfinder_at_email_address_contact_3994434.png"></a></li>
             </ul>
         </div>
     </header>
+    <div class ="projects">
+        <h2 class="project-title"><b>Memory Card Game (Jan 2021 - Feb 2021)</b></h2>
+        <p class="project-description">
+
+        </p>
+        <h2 class="project-title"><b>Snake (Dec 2020 - Jan 2021)</b></h2>
+        <p class="project-description">
+
+        </p>
+        <h2 class="project-title"><b>Personal Website (Dec 2020 - Present)</b></h2>
+        <p class="project-description">
+            I originally started this website so that I could document my projects that I work on in my free time. I also used it as a chance to become more confident with web development aspects such as HTML and CSS.
+            I will also use it as a place for people to learn some more information about me and also have access to my social media links. The goal is to update this website over time
+            as I add more and more content to it.
+        </p>
+    </div>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="other.html">About Me</a></li>
-            <li><a href="David Lutman Resume.pdf">Resume</a></li>
             <li><a href="projects.html">Projects</a></li>
+            <li><a href="David Lutman Resume.pdf">Resume</a></li>
         </ul>
     </nav>
 </body>
