--- a/other.html
+++ b/other.html
@@ -18,16 +18,29 @@
                 <li><a href="https://www.linkedin.com/in/david-lutman/"><img src="iconfinder_Circled_Linkedin_svg_5279114.png"></a></li>
                 <li><a href="https://github.com/Davern"><img src="iconfinder_github_317712.png"></a></li>
                 <li><a href="https://www.instagram.com/davidlutman/"><img src="iconfinder_Circled_Instagram_svg_5279112.png"></a></li>
-                <li><a href="mailto:davidlutman@telus.net"><img src="iconfinder_Email_4550857.png"></a></li>
+                <li><a href="mailto:davidlutman@telus.net"><img src="iconfinder_at_email_address_contact_3994434.png"></a></li>
             </ul>
         </div>
     </header>
+    <div class ="aboutme">
+        <h2 class="about-title"><b>About myself: </b></h2>
+        <p class="About">
+            My name is David Lutman and I am a 23 year old programmer from Vancouver, Canada. 
+            I originally grew up in North Vancouver, where I lived there until university. 
+            Where I moved to live on campus at the University of British Columbia. At University I tried to get involved with as many things as possible.
+            I joined a fraternity and got involved with as many recreation sports as my schedule would allow it. 
+            I was originally drawn to Computer Science because I had always enjoyed problem solving as I grew up. When I took the intro Computer Science course, 
+            I knew immediately that this was the field that I wanted to devote my university experience to learning more about. Outside of programming I tend to spend my time playing recreation soccer and basketball, playing video games with my friends, and reading fantasy or science fiction novels. 
+            Another big passion of mine is travelling, unfortunately the pandemic has hampered my ability to travel as much as I would like. However, hopefully I will be able to return to travelling soon.
+
+        </p>
+    </div>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="other.html">About Me</a></li>
-            <li><a href="David Lutman Resume.pdf">Resume</a></li>
             <li><a href="projects.html">Projects</a></li>
+            <li><a href="David Lutman Resume.pdf">Resume</a></li>
         </ul>
     </nav>
 </body>
