updated snake description

--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,9 @@
         </p>
         <h2 class="project-title"><b>Snake (Dec 2020 - Jan 2021)</b></h2>
         <p class="project-description">
-
+            I started this project to further my knowledge in python and the pygame library. It is a simple game recognizable as 
+            the well known Snake game. Where the user controls the head of the snake and attempts to eat food to make the snake grow larger. The user 
+            wins when the snake reaches a size designated by the game before it starts. If the user causes the snake to run into itself or off the screen then the game is over and the user has the option to reset and try again. Overall, this was a pretty quick project which allowed me to become more comfortable with python and programming using the pygame library.
         </p>
         <h2 class="project-title"><b>Personal Website (Dec 2020 - Present)</b></h2>
         <p class="project-description">
