changed descriptions for memory game and about me

--- a/other.html
+++ b/other.html
@@ -27,11 +27,14 @@
         <p class="About">
             My name is David Lutman and I am a 23 year old programmer from Vancouver, Canada. 
             I originally grew up in North Vancouver, where I lived there until university. 
-            Where I moved to live on campus at the University of British Columbia. At University I tried to get involved with as many things as possible.
+            One I began my university career at the University of British Columbia, I moved onto campus. 
+            At University I tried to get involved with as many things as possible.
             I joined a fraternity and got involved with as many recreation sports as my schedule would allow it. 
-            I was originally drawn to Computer Science because I had always enjoyed problem solving as I grew up. When I took the intro Computer Science course, 
-            I knew immediately that this was the field that I wanted to devote my university experience to learning more about. Outside of programming I tend to spend my time playing recreation soccer and basketball, playing video games with my friends, and reading fantasy or science fiction novels. 
-            Another big passion of mine is travelling, unfortunately the pandemic has hampered my ability to travel as much as I would like. However, hopefully I will be able to return to travelling soon.
+            I was originally drawn to Computer Science because I had always enjoyed problem solving as I grew up. 
+            When I took the intro Computer Science course, I knew immediately that this was the field that I wanted to devote my university experience to learning more about. 
+            Outside of programming I tend to spend my time playing recreation soccer and basketball, playing video games with my friends, and reading fantasy or science fiction novels. 
+            Another big passion of mine is travelling, having gone on road trips down the west coast of the United States of America on multiple occasions, as well as having visited the Caribbean and Japan.
+            I hope to continue travelling as I age and exploring more areas of the world so that I can learn and experience more and more of what the world has to offer. 
 
         </p>
     </div>
