--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,9 @@
     <div class ="projects">
         <h2 class="project-title"><b>Memory Card Game (Jan 2021 - Feb 2021)</b></h2>
         <p class="project-description">
-
+            This project was a continuation on learning and getting more comfortable with the pygame library and python overall. It is a version of a memory card matching game. There are a certain amount of cards which are flipped over and each contain an image of a fruit.
+            Each fruit is represented twice in the cards. It is up to the user to attempt to flip two cards at once and match them together. If the image is not the same then the cards flip over and the user trys again. The game completes once the user has flipped and correctly matched each pair in the deck. 
+            The user is then prompted with whether or not they would like to restart and try again. 
         </p>
         <h2 class="project-title"><b>Snake (Dec 2020 - Jan 2021)</b></h2>
         <p class="project-description">
