--- a/other.html
+++ b/other.html
@@ -25,17 +25,17 @@
     <div class ="aboutme">
         <h2 class="about-title"><b>About myself: </b></h2>
         <p class="About">
-            My name is David Lutman and I am a 23 year old programmer from Vancouver, Canada. 
-            I originally grew up in North Vancouver, where I lived there until university. 
-            One I began my university career at the University of British Columbia, I moved onto campus. 
-            At University I tried to get involved with as many things as possible.
+            My name is David Lutman and I am a 23-year-old programmer from Vancouver, Canada. 
+            I originally grew up in North Vancouver where I lived until I went to university. 
+            One I began my post-secondary studies at the University of British Columbia, I moved onto campus. 
+            At University I tried to get involved with as many things as possible. 
             I joined a fraternity and got involved with as many recreation sports as my schedule would allow it. 
             I was originally drawn to Computer Science because I had always enjoyed problem solving as I grew up. 
             When I took the intro Computer Science course, I knew immediately that this was the field that I wanted to devote my university experience to learning more about. 
-            Outside of programming I tend to spend my time playing recreation soccer and basketball, playing video games with my friends, and reading fantasy or science fiction novels. 
-            Another big passion of mine is travelling, having gone on road trips down the west coast of the United States of America on multiple occasions, as well as having visited the Caribbean and Japan.
-            I hope to continue travelling as I age and exploring more areas of the world so that I can learn and experience more and more of what the world has to offer. 
-
+            Computer science allowed me to solve problems in more than just one way, which I really valued as it felt less rigid than I had previously experience throughout my schooling. 
+            Outside of programming I tend to spend my time playing recreation soccer and basketball, playing video games with my friends, and reading fantasy or science fiction novels.
+             Another big passion of mine is travelling, I have gone on multiple road trips down the west coast of the United States of America, as well as having visited islands in the Caribbean and Japan. 
+             I hope to continue travelling as I age and exploring more areas of the world so that I can learn and experience more of what the world has to offer.
         </p>
     </div>
     <nav>
