updated descriptions and spell checked

--- a/projects.html
+++ b/projects.html
@@ -25,21 +25,15 @@
     <div class ="projects">
         <h2 class="project-title"><b>Memory Card Game (Jan 2021 - Feb 2021)</b></h2>
         <p class="project-description">
-            This project was a continuation on learning and getting more comfortable with the pygame library and python overall. It is a version of a memory card matching game. There are a certain amount of cards which are flipped over and each contain an image of a fruit.
-            Each fruit is represented twice in the cards. It is up to the user to attempt to flip two cards at once and match them together. If the image is not the same then the cards flip over and the user trys again. The game completes once the user has flipped and correctly matched each pair in the deck. 
-            The user is then prompted with whether or not they would like to restart and try again. 
+            This project was a continuation on learning and getting more comfortable with the pygame library and python overall. It is a version of a memory card matching game. There are a certain number of cards which are flipped over and each contain an image of a fruit. Each fruit is represented twice in the cards. It is up to the user to attempt to flip two cards at once and match them together. If the image is not the same then the cards flip over and the user tries again. The game completes once the user has flipped and correctly matched each pair in the deck. The user is then prompted with whether or not they would like to restart and try again. 
         </p>
         <h2 class="project-title"><b>Snake (Dec 2020 - Jan 2021)</b></h2>
         <p class="project-description">
-            I started this project to further my knowledge in python and the pygame library. It is a simple game recognizable as 
-            the well known Snake game. Where the user controls the head of the snake and attempts to eat food to make the snake grow larger. The user 
-            wins when the snake reaches a size designated by the game before it starts. If the user causes the snake to run into itself or off the screen then the game is over and the user has the option to reset and try again. Overall, this was a pretty quick project which allowed me to become more comfortable with python and programming using the pygame library.
-        </p>
+            I started this project to further my knowledge in python and the pygame library. It is a simple game recognizable as the well-known Snake game. Where the user controls the head of the snake and attempts to eat food to make the snake grow larger. The user wins when the snake reaches a size designated by the game before it starts. If the user causes the snake to run into itself or off the screen then the game is over and the user has the option to reset and try again. Overall, this was a pretty quick project which allowed me to become more comfortable with python and programming using the pygame library. 
+            </p>
         <h2 class="project-title"><b>Personal Website (Dec 2020 - Present)</b></h2>
         <p class="project-description">
-            I originally started this website so that I could document my projects that I work on in my free time. I also used it as a chance to become more confident with web development aspects such as HTML and CSS.
-            I will also use it as a place for people to learn some more information about me and also have access to my social media links. The goal is to update this website over time
-            as I add more and more content to it.
+            I originally started this website so that I could document my projects that I work on in my free time. I also used it as a chance to become more confident with web development aspects such as HTML and CSS. I will also use it as a place for people to learn some more information about me and also have access to my social media links. The goal is to update this website over time as I add more and more content to it. 
         </p>
     </div>
     <nav>
