added todo list to the projects page

--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,10 @@
         </div>
     </header>
     <div class ="projects">
+        <h2 class="project-title"><b>Todo List(Feb 2021 - March 2021)</b></h2>
+        <p class="project-description">
+            I created this project using React as a way of teaching myself more about React. The app allows a user to create an item to add to their todo list. The user can then click on the item to set it as a complete, which causes a line to be drawn through it to signify its completion. The user can also click a box next to the task which will permanently delete it from the todo list. The user is also given the option of pressing three buttons to either display only completed tasks, only uncompleted tasks, or all tasks. A number is included in the app to inform the user of the number of remaining active tasks. Lastly, there is another button for the user to click if they want to delete all of the completed tasks at once.    
+        </p>
         <h2 class="project-title"><b>Memory Card Game (Jan 2021 - Feb 2021)</b></h2>
         <p class="project-description">
             This project was a continuation on learning and getting more comfortable with the pygame library and python overall. It is a version of a memory card matching game. There are a certain number of cards which are flipped over and each contain an image of a fruit. Each fruit is represented twice in the cards. It is up to the user to attempt to flip two cards at once and match them together. If the image is not the same then the cards flip over and the user tries again. The game completes once the user has flipped and correctly matched each pair in the deck. The user is then prompted with whether or not they would like to restart and try again. 
