added descriptions for my two newest projects created using Unity and C# scripts

--- a/projects.html
+++ b/projects.html
@@ -24,21 +24,58 @@
     </header>
     <div class ="projects">
         <h2 class="project-title2"><b>Projects: </b></h2>
+        <h2 class="project-title"><b>Retro Spaceship Shooting Game(April 2021 - May 2021)</b></h2>
+        <p class="project-description">
+            This project was a more complicated Unity project to further my knowledge with programming a game. The user controls a space ship that they can move with WASD and shoot with Spacebar. 
+            There are a total of 5 levels throughout the game that increase with difficulty as the user progresses in the game. Each level has a set amount of enemies that need to be destroyed by the player before they can advance.
+            The game also features continous background music to provide an atmosphere for the player. The game also features sound effects for actions that happen throughout the game such as shooting, ships being destroyed, and asteriods being destroyed. 
+            Both the enemy ships and asteroids are spawned at an increasing rate as the player plays throughout the levels, causing more and more chaos for the player to deal with. The background changes as the player advances the levels to give a sense of progression. 
+            Also the final level contains a new enemy ship variant to give a feeling of a final level and a significant challenge. 
+            I also implemented a start menu that contains the ability to control the volume of the music and sound effects and also the ability for the player to choose which level they would like to start on. 
+
+        </p>
+        <h2 class="project-title"><b>Flappy Bird (Snek) Lite Game(April 2021)</b></h2>
+        <p class="project-description">
+            I created this project to teach myself how to use Unity at a basic level. 
+            The user controls a snake character that they must continually press the jump button to navigate the snake through the repeatably spawning pipes. 
+            The pipes have a set distance between them, but will randomly spawn at different areas on the game screen as to give a challenge for the user. 
+            The pipes spawn rate also increases as the user continues to avoid them and increase their score. I used assets from free game art to display the pipes, background, and the snake.
+            I also implemented a start menu to teach myself how to create a simple game menu with options and quit and start functions. The scripts used were coded in C#.  
+        </p>
         <h2 class="project-title"><b>Todo List(Feb 2021 - March 2021)</b></h2>
         <p class="project-description">
-            I created this project using React as a way of teaching myself more about React. The app allows a user to create an item to add to their todo list. The user can then click on the item to set it as a complete, which causes a line to be drawn through it to signify its completion. The user can also click a box next to the task which will permanently delete it from the todo list. The user is also given the option of pressing three buttons to either display only completed tasks, only uncompleted tasks, or all tasks. A number is included in the app to inform the user of the number of remaining active tasks. Lastly, there is another button for the user to click if they want to delete all of the completed tasks at once.    
+            I created this project using React as a way of teaching myself more about React. 
+            The app allows a user to create an item to add to their todo list. 
+            The user can then click on the item to set it as a complete, 
+            which causes a line to be drawn through it to signify its completion. 
+            The user can also click a box next to the task which will permanently delete it from the todo list. 
+            The user is also given the option of pressing three buttons to either display only completed tasks, 
+            only uncompleted tasks, or all tasks. A number is included in the app to inform the user of the number of remaining active tasks. 
+            Lastly, there is another button for the user to click if they want to delete all of the completed tasks at once.    
         </p>
         <h2 class="project-title"><b>Memory Card Game (Jan 2021 - Feb 2021)</b></h2>
         <p class="project-description">
-            This project was a continuation on learning and getting more comfortable with the pygame library and python overall. It is a version of a memory card matching game. There are a certain number of cards which are flipped over and each contain an image of a fruit. Each fruit is represented twice in the cards. It is up to the user to attempt to flip two cards at once and match them together. If the image is not the same then the cards flip over and the user tries again. The game completes once the user has flipped and correctly matched each pair in the deck. The user is then prompted with whether or not they would like to restart and try again. 
+            This project was a continuation on learning and getting more comfortable with the pygame library and python overall. 
+            It is a version of a memory card matching game. There are a certain number of cards which are flipped over and each contain an image of a fruit. 
+            Each fruit is represented twice in the cards. It is up to the user to attempt to flip two cards at once and match them together.
+            If the image is not the same then the cards flip over and the user tries again. 
+            The game completes once the user has flipped and correctly matched each pair in the deck. 
+            The user is then prompted with whether or not they would like to restart and try again. 
         </p>
         <h2 class="project-title"><b>Snake (Dec 2020 - Jan 2021)</b></h2>
         <p class="project-description">
-            I started this project to further my knowledge in python and the pygame library. It is a simple game recognizable as the well-known Snake game. Where the user controls the head of the snake and attempts to eat food to make the snake grow larger. The user wins when the snake reaches a size designated by the game before it starts. If the user causes the snake to run into itself or off the screen then the game is over and the user has the option to reset and try again. Overall, this was a pretty quick project which allowed me to become more comfortable with python and programming using the pygame library. 
+            I started this project to further my knowledge in python and the pygame library. 
+            It is a simple game recognizable as the well-known Snake game. 
+            Where the user controls the head of the snake and attempts to eat food to make the snake grow larger.
+            The user wins when the snake reaches a size designated by the game before it starts.
+            If the user causes the snake to run into itself or off the screen then the game is over and the user has the option to reset and try again. Overall, this was a pretty quick project which allowed me to become more comfortable with python and programming using the pygame library. 
             </p>
         <h2 class="project-title"><b>Personal Website (Dec 2020 - Present)</b></h2>
         <p class="project-description">
-            I originally started this website so that I could document my projects that I work on in my free time. I also used it as a chance to become more confident with web development aspects such as HTML and CSS. I will also use it as a place for people to learn some more information about me and also have access to my social media links. The goal is to update this website over time as I add more and more content to it. 
+            I originally started this website so that I could document my projects that I work on in my free time.
+            I also used it as a chance to become more confident with web development aspects such as HTML and CSS.
+            I will also use it as a place for people to learn some more information about me and also have access to my social media links. 
+            The goal is to update this website over time as I add more and more content to it. 
         </p>
     </div>
     <nav>
