added hyperlinks to both of my games so that people can play them on Unitys site

--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
     </header>
     <div class ="projects">
         <h2 class="project-title2"><b>Projects: </b></h2>
-        <h2 class="project-title"><b>Retro Spaceship Shooting Game(April 2021 - May 2021)</b></h2>
+        <h2 class="project-title"><b href="https://play.unity.com/mg/other/games-zf5">Retro Spaceship Shooting Game(April 2021 - May 2021)</b></h2>
         <p class="project-description">
             This project was a more complicated Unity project to further my knowledge with programming a game. The user controls a space ship that they can move with WASD and shoot with Spacebar. 
             There are a total of 5 levels throughout the game that increase with difficulty as the user progresses in the game. Each level has a set amount of enemies that need to be destroyed by the player before they can advance.
@@ -34,7 +34,7 @@
             I also implemented a start menu that contains the ability to control the volume of the music and sound effects and also the ability for the player to choose which level they would like to start on. 
 
         </p>
-        <h2 class="project-title"><b>Flappy Bird (Snek) Lite Game(April 2021)</b></h2>
+        <h2 class="project-title"><b href="https://play.unity.com/mg/other/floppysnek">Flappy Bird (Snek) Lite Game(April 2021)</b></h2>
         <p class="project-description">
             I created this project to teach myself how to use Unity at a basic level. 
             The user controls a snake character that they must continually press the jump button to navigate the snake through the repeatably spawning pipes. 
