added the same arrow to the flappy bird lite title

--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
             I also implemented a start menu that contains the ability to control the volume of the music and sound effects and also the ability for the player to choose which level they would like to start on. 
 
         </p>
-        <h2 class="project-title"><a href="https://play.unity.com/mg/other/floppysnek"><b>Flappy Bird (Snek) Lite Game(April 2021)</b></a></h2>
+        <h2 class="project-title"><b>Flappy Bird (Snek) Lite Game(April 2021)</b><a href="https://play.unity.com/mg/other/floppysnek"><img src="iconfinder_227601_right_arrow_icon_16px.png"></a></h2>
         <p class="project-description">
             I created this project to teach myself how to use Unity at a basic level. 
             The user controls a snake character that they must continually press the jump button to navigate the snake through the repeatably spawning pipes. 
