--- a/other.html
+++ b/other.html
@@ -43,7 +43,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="other.html">About Me</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="David Lutman Resume.pdf">Resume</a></li>
+            <li><a href="David Lutman Resume 2021.pdf">Resume</a></li>
         </ul>
     </nav>
 </body>
