added pdf link to other pages

--- a/projects.html
+++ b/projects.html
@@ -72,8 +72,8 @@
             </p>
         <h2 class="project-title"><b>Personal Website (Dec 2020 - Present)</b></h2>
         <p class="project-description">
-            I originally started this website so that I could document my projects that I work on in my free time.
-            I also used it as a chance to become more confident with web development aspects such as HTML and CSS.
+            I originally started this website so that I could document my projects that I work on in my free time. 
+            I also used it as a chance to become more confident with web development aspects such as HTML and CSS. 
             I will also use it as a place for people to learn some more information about me and also have access to my social media links. 
             The goal is to update this website over time as I add more and more content to it. 
         </p>
@@ -83,7 +83,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="other.html">About Me</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="David Lutman Resume.pdf">Resume</a></li>
+            <li><a href="David Lutman Resume 2021.pdf">Resume</a></li>
         </ul>
     </nav>
 </body>
